# pluvus-workflow-prototype

./: .env.example  .gitignore  .replit  AI_PRODUCTION_REMEDIATION_PLAN.md  ARCHITECTURE_GAP_ANALYSIS.md  DEPLOYMENT.md  EVAL_500_TESTCASES.md  MANUAL_ESCALATION_GUARDRAILS.md  MERGE_READINESS.md  NEGOTIATION_LIMITATIONS.md  README.md  TESTING_LANDSCAPE.md  docker-compose.yml  dump.rdb  improvements_LLM.md  negotiation.md  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  sample-creators-vendor.tsv  sample-creators.csv  start-prod.sh  tsconfig.base.json
.claude/docs/: implementation-plan.md  open-questions.md  project-overview.md  source-of-truth.md  system-architecture.md
.claude/skills/add-conversion/: SKILL.md
.claude/skills/reclone-campaign/: SKILL.md
.claude/spec/: draft-comprehension-threading.md
.github/workflows/: ci.yml
agent/: .replit  CLASSIFICATION.md  pyproject.toml  requirements.txt  run_two_replies.py
agent/app/: brief.py  injection.py  llm.py  main.py  security.py  structured.py  telemetry.py  topic_gate.py
agent/app/routes/: classify.py  negotiate.py  outreach_template.py
agent/eval/: README.md  dataset_v1.jsonl  reference_classifier.py  run.py  scorer.py
agent/samples/: README.md  __init__.py  __main__.py  campaign.py  client.py  conversations.py  deterministic.py  emit.py  emit_chat.py  runner.py  templates.py
agent/tests/: test_batch5.py  test_classifier_spec_parity.py  test_classify_structured.py  test_dataset_500.py  test_draft_copy.py  test_escalation_traps.py  test_eval_gate.py  test_followup_prompt.py  test_injection.py  test_live_model_smoke.py  test_llm_determinism.py  test_llm_failover.py  test_llm_timeout.py  test_negotiate_decision.py  test_negotiate_deterministic.py  test_negotiate_llm_strategy.py  test_negotiate_structured.py  test_negotiation_eval_gate.py  test_obligation_commitments.py  test_offer_prompt_rules.py  test_outreach_template.py  test_security.py  test_structured.py  test_telemetry.py  test_topic_gate.py
agent/tests/negotiation_eval/: EVAL_BATCH2_VERIFY.md  NEGOTIATION_EVAL_8B.md  NEGOTIATION_EVAL_FULL.md  NEGOTIATION_EVAL_THREADED.md  adv_classify.json  adv_draft.json  adv_money.json  adv_money_AFTER.json  adv_multiq.json  adv_multiq_AFTER.json  adv_multiturn.json  adv_multiturn_AFTER_FH1.json  adversarial_live.py  run_eval.py  run_eval_500.py
agent/tests/negotiation_eval/dataset_500/: .gitignore  DATASET_500.md  QUESTION_COVERAGE.md  audit_coverage.py  audit_live.py  bank_a_money.json  bank_b_multiq.json  bank_c_answerable.json  bank_de.json  bank_fg.json  bank_h.json  bank_j_conversations.json  classify_live.py  conversations_live.py  loader.py  subset_live.py  validate.py  watch.py
docs/: csv-creator-import.md  phase-9-observability.md  phase-9-results.md
readme_docs/: AI_PRODUCTION_STATUS.md  ARCHITECTURE.md  ARCHITECTURE_GAP_ANALYSIS.md  CONTENT_SUBMISSION_SPEC.md  DRAFTING_HUMANIZATION_SAMPLE_REPLIES.md  ENV_VARS.md  ESCALATION_ARCHITECTURE_REVIEW.md  EVAL_500_TESTCASES.md  EVAL_SUBSET_30.md  FOUNDER_PROD_READINESS_QUESTIONS.md  MANUAL_ESCALATION_REFERENCE.md  MANUAL_ESCALATION_RESOLUTION.md  PRODUCTION_TEST_AUDIT.md  Payment Setup.md  README_AI_PRODUCTION_GAP_ANALYSIS.md  REPLY_GENERATION_PROMPTS.md  REPLY_GENERATION_PROMPTS_VERBATIM.md  SAMPLE_COPY_CHAT.md  SAMPLE_COPY_CURRENT_STATE.md  TWO_REPLIES_AI_RESPONSE.md  UX_IMPROVEMENTS.md  manual_escalation_cases_example.md  negotiation.md  production_system_analysis.md  validation_logic.md
readme_docs/ops/: ALERTING.md  SECRETS.md  STABLE_URL.md  TEST_DATA_SEPARATION.md
readme_docs/report/: OPUS_SUBSET_RUN_2026-07-13.md
readme_docs/testing/: ATTRIBUTION_PHASE2.md  ATTRIBUTION_PHASE3.md  README.md
scripts/: scan-secrets.mjs  tunnel.mjs
server/: Dockerfile  drizzle.config.ts  inspect_db.mjs  package.json  prisma.config.ts  reset_instance.mjs  trace_state.ts
server/drizzle/: introspected-relations.reference.ts  introspected-schema.reference.ts
server/prisma/: apply-all-migrations.ts  apply-migration.ts  backfill-payment-token-hash.ts  check-instance.ts  diag-all.ts  diag-campaign.ts  dump-events.ts  last-outbound.ts  reset-to-enrolled.ts  reset-to-negotiating.ts  schema.prisma  seed.demo.ts  seed.ts  setup-live-test.ts  setup-phase8-harness.ts  verify-drizzle.ts
server/scripts/: add-content-links-enums.ts  applyPendingMigrations.mjs  backfill-gmail-labels.ts  backfill-obligations.ts  check-workflow-flow.ts  cleanHarnessData.ts  probe-gmail-labels.ts
server/src/: app.ts  diagGrant.ts  index.ts  processRole.test.ts  processRole.ts
shared/: classifier-spec.json
web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  theme-mode.tsx  theme.ts  vite-env.d.ts
(+388 files in other folders)
