[project]
name = "pluvus-agent"
version = "0.1.0"
description = "Pluvus Workflow — LangGraph agent service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

# LLM provider is selected at runtime by LLM_PROVIDER (ollama | openai); see app/llm.py.
[project.optional-dependencies]
# Local dev (Ollama / Qwen) — LLM_PROVIDER=ollama
ai = [
    "langgraph>=0.1.0",
    "langchain-ollama>=0.2.0",
]
# Prod (OpenAI) — LLM_PROVIDER=openai. Install with: pip install -e ".[ai-openai]"
ai-openai = [
    "langgraph>=0.1.0",
    "langchain-openai>=0.1.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
