[project]
name = "pluvus-agent"
version = "0.1.0"
description = "Pluvus Workflow — LangGraph agent service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

# LLM provider is selected at runtime by LLM_PROVIDER (anthropic | ollama); see app/llm.py.
[project.optional-dependencies]
# Prod (Anthropic / Claude) — LLM_PROVIDER=anthropic (default). Install with: pip install -e ".[ai]"
ai = [
    "langgraph>=0.1.0",
    "langchain-anthropic>=0.3.0",
]
# Local dev (Ollama / Qwen) — LLM_PROVIDER=ollama. Install with: pip install -e ".[ai-ollama]"
ai-ollama = [
    "langgraph>=0.1.0",
    "langchain-ollama>=0.2.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
